# QR-code_detection

./: .gitignore  README.md  pytest.ini
.github/workflows/: qr__code.yml
c++_implementation/: CMakeLists.txt  main.cpp
c++_implementation/benchmark/: CMakeLists.txt  benchmark.cpp
c++_implementation/detection/: detection.cpp  detection.hh  preprocess.cpp  preprocess.hh
c++_implementation/image/: historigram.cpp  historigram.hh  image.cpp  image.hh  image_io.cpp  image_io.hh
c++_implementation/include/debug/: debug_visualization.hh
c++_implementation/include/detection/: detection.hh  pipeline.hh  preprocess.hh
c++_implementation/include/evaluation/: evaluation.hh
c++_implementation/include/util/: histogram.hh  historigram.hh  image.hh  image_io.hh
c++_implementation/src/: CMakeLists.txt  main.cpp
c++_implementation/src/debug/: debug_visualization.cpp
c++_implementation/src/detection/: detection.cpp  pipeline.cpp  preprocess.cpp
c++_implementation/src/evaluation/: evaluation.cpp
c++_implementation/src/util/: histogram.cpp  historigram.cpp  image.cpp  image_io.cpp
c++_implementation/test_suite/: CMakeLists.txt  test_suite.cpp
python/: benchmark.py  evaluation.py  main.py  pyproject.toml  square_detection.py
python/echec_realise/: failed_method1.py  failed_method2.py
test_suite/python/: test_integration.py  test_suite.py
