[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "scikit-image>=0.26.0",
]

[project.optional-dependencies]
dev = ["pytest" ]

[tool.pytest.ini_options]
pythonpath = ["."]